--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -29,7 +29,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
 
     <div class="d-flex flex-column">
-        <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
+        <script suppress-error="BL9992" async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="tanukiaibot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>
     </div>
 </body>
 
